client/src/component/chatroom/styles.styl
.main 
  height  100%
  width   1000px
  backface-visibility  hidden
  background  #ffffff
  display  flex
  border-radius  3px
  &__navi
    @media(max-width 600px){
      flex: 0 0 80px
      overflow hidden
    }
    flex  0 0 280px
    border-radius 3px 0 0 3px
    background-color  #2e3238
  &__content
    border-radius 0 3px 3px 0
    text-align center
    background-color  #eee
    flex  1
    display  flex
    flex-direction  column
    img
      width: 40px
      height 40px
      border-radius: 2px
    &__title
      flex 0 0 51px
      position relative
      padding 10px 0
      margin: 0 19px
      border-bottom 1px solid #d6d6d6
      background-color #eee
      &__text
        font-weight 400
        text-align center
        line-height 30px
        height 25px
        display inline-block
        font-size 14px
        cursor pointer
        vertical-align middle
        max-width 300px
        overflow hidden
        text-overflow ellipsis
        white-space nowrap
        word-wrap normal
        text-decoration none
        color #000
    &__messages
      overflow  auto
      flex  1
      height 200px
      word-wrap  break-word
      word-break  break-all
      padding 0 19px
      visibility: hidden
      &__time
        text-align: center
        margin: 10px auto
        max-width: 50%
        span
          display: inline-block;
          font-size: 12px;
          padding: 1px 18px;
          color: #b2b2b2;
      &:hover
        visibility: visible
      &::-webkit-scrollbar
        width: 6px
        height 6px
      &::-webkit-scrollbar:window-inactive
        display: none
      &::-webkit-scrollbar-track
        background-color: transparent
      &::-webkit-scrollbar-thumb
        border-radius: 3px
        background: #c3c3c3
      .content_file
        padding: 0px
        background-color: #fff
        &:after
          border: none
          background-color: #fff
      &__item
        @media(max-width 500px){
          max-width : 100px
        }
        padding  9px 13px
        min-height  25px
        font-size  14px
        line-height  1.6
        border-radius  3px
        background-color  #b2e281
        max-width  500px
        margin  0 10px
        display  inline-block
        position relative
        &:after
          border 6px solid transparent
          position absolute
          content " "
          top 14px
          left 100%
          border-left-color #b2e281
          border-left-width 4px
        pre>img
          width: auto
          height: auto
          max-width 400px
          max-height: 400px
        pre>span
          vertical-align: middle
        .pending
          width: 100%
          height: 100%
          position: absolute
          background-color: #000
          opacity 0.5
          img
            width: 16px
            height 16px
            position: relative
            top: 50%
            left 50%
            margin-top: -8px
            margin-left: -8px
      &__name
        display inline-block
        width 40px
        height 40px
        border-radius 2px
        background-color #fff
        vertical-align top
        text-align center
        line-height 40px
      &__right
        font-size  14px
        text-align  right
        line-height  1.6
        margin-bottom  16px
      &__left
        font-size  14px
        margin-bottom  16px
        width  100%
        line-height  1.6
        text-align  left
        .name_left
          float: left
        .content_left
          background-color: #fff
        .content_left:before
          border 6px solid transparent
          position absolute
          content " "
          top 14px
          right 100%
          border-right-color #fff
          border-right-width 4px
        .content_left:after
          display: none
    &__input
      flex  0 0 180px
      margin-right  19px
      border-top  1px solid #d6d6d6
      &__toolbar
        height 40px
        padding 5px 17px
        position relative
        text-align:  left 
        .face
          width 30px
          display inline-block
          height 30px
          background url("../../assets/sprint.png") no-repeat
          background-position: -404px -398px
          background-size: 487px 462px
          cursor pointer
        .tool
          position absolute
          top -320px
          transition: all 0.3s
        .file
          margin-left: 10px
          display inline-block
          width 30px
          height 30px
          background url("../../assets/sprint.png") no-repeat
          background-position: -118px -432px
          background-size: 487px 462px
          cursor pointer
          vertical-align: top
          input
            opacity 0
            cursor pointer
          &::-webkit-file-upload-button
            cursor: pointer
      textarea
        background-color  #eee
        padding  0 10px
        width  100%
        border  none
        height  50%
        resize none
        &:focus
          outline none
      .submit
        float  right 
        margin-right  10px
        background-color  #fff
        color  #222
        display  inline-block
        border  1px solid #c1c1c1
        border-radius  4px
        padding  3px 30px
        font-size  14px
        line-height 1.6
        &:hover
          background #f8f8f8
    pre
      margin: 0
      font-family: inherit
      font-size: inherit
      white-space: pre-wrap
      word-break: normal
      text-align: left
    &__notSelect
      &__container
        margin-top: 130px
        i
          display: inline-block;
          vertical-align: middle;
          width: 100px
          height: 90px
          background: url("../../assets/sprint.png") no-repeat
          background-position: -96px -150px
          background-size: 487px 462px
        p
          color #ccc
          font-size 13px
.scrollWrapper
  visibility: visible
  &:first-child
    margin-top 20px

.header
  width: 100%
  height 147px



.content
  width: 100%
  overflow: auto
  height: 640px
  padding: 0
  .scrollWrapper:first-child
    margin-top 0px !important 
  &__chatContact
    cursor pointer
    overflow: hidden;
    padding: 12px 18px 11px;
    color #fff
    border-bottom 1px solid #292c33
    &__avatar
      width 40px
      height 40px
      border-radius 2px
      line-height 40px
      text-align center
      display inline-block
      background-color #fff
      color #ccc
      margin-right 10px
      position relative
      img
        width: 40px
        height: 40px
        border-radius: 2px
      &__unread
        position absolute
        line-height 19.2px
        color #fff
        top -6px
        right -6px
        background url('../../assets/sprint.png') no-repeat
        background-position: -451px -380px
        background-size: 487px 462px
        display inline-block
        width 22px
        height 16px
    &__info
      display inline-block
      vertical-align bottom
      .text
        @media(max-width 500px){
            display: none
          }
        height 20px
        color #989898
        font-size 13px
        width 160px
        overflow hidden
        text-overflow ellipsis
        white-space nowrap
        word-wrap normal
        height 1.5em
  &__active
    background-color #3a3f45

.naviHeader
  &__header
    position relative
    padding: 18px
    &__pop
      box-shadow: rgba(0,0,0,.1) 2px 3px 10px
      border: 1px solid #d6d6d6
      position: absolute
      width: 180px
      height: 206px
      background-color: transparent
      border-radius: 3px
      outline: none 
      z-index 100
      left: 88px
      top: 50px
      a
        background-color: #fff
        display: block
        color: #000000
        font-size: 14px
        padding: 8px
        border-bottom: 1px solid #f1f1f1
        text-align: left
        outline: none
        &:hover
          background-color: #f5f5f5
      span
        width 34px
        height 34px
        background: url('../../assets/sprint.png') no-repeat
        background-size: 487px 462px
        display inline-block
        vertical-align: middle
        margin-right: 8px
      .logout
        background-position: -102px -398px
      .sound
        background-position: -170px -398px
      .group
        background-position: 0px -398px
      .changeAvatar
        background-position: -118px -432px
        input
          opacity 0
    &__avatar
      display inline-block
      height 40px
      width 40px
      border-radius: 2px
      background-color #eee
      margin-right: 10px
      img
        width 40px
        height 40px
        background-color: #fff
        border-radius: 2px
        display: inline-block
        text-align: center
        line-height: 40px
    &__info
      display inline-block
      font-size: 18px
      font-weight: 400
      line-height: 40px
      color: #fff
      vertical-align: middle;
      white-space: nowrap;
      overflow: hidden;
      text-overflow: ellipsis;
      max-width: 100px;
      @media(max-width 500px){
          width 100px
          position relative
          right 10px
        }
    &__setting
      cursor pointer
      float: right 
      display: inline-block
      width: 30px
      height: 30px
      vertical-align: middle
      background: url('../../assets/sprint.png')
      background-position: -434px -398px
      background-size: 487px 462px
  &__search
    width: 244px
    margin: 0 auto 6px
    &__input
      box-sizing: content-box
      width: 214px
      height: 32px
      line-height: 32px
      padding: 0
      border: 0
      border-radius: 2px
      background-color: #26292e
      color: #fff
      padding-left: 30px
      font-size: 12px
    &__icon
      background url("../../assets/sprint.png") no-repeat
      background-position -60px -432px
      background-size 487px 462px
      display inline-block
      vertical-align middle
      width 30px
      height 30px
      position absolute
    .show
      display block
      max-height 420px
      position relative
      &__container
        width: 244px
        top: 36px
        background-color #33363b
        box-shadow 0 0 10px #2a2a2a
        border-radius 2px
        position: absolute;
        background-color: #fff;
        z-index: 99;
        top: 0;
        left: 0;
        outline: none;
        &__item
          display: flex
          overflow: hidden
          padding: 10px 9px
          border-bottom: 1px solid #33363b
          background-color: #393c43
          .item__info
            flex: 1
            display: flex
            align-items: center
            justify-content: space-around
            &__name
              color: #ffffff
            &__icon
              cursor pointer

